<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_post_content_padding">

    <TextView
        android:id="@+id/text_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_post_user_name_padding"
        android:drawableLeft="@drawable/ic_facebook"
        android:drawablePadding="@dimen/activity_post_user_name_drawable_padding"
        android:drawableStart="@drawable/ic_facebook"
        android:text="@string/user_name"
        android:textSize="@dimen/activity_post_user_name_text_size" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/text_user_name"
        android:layout_marginBottom="@dimen/activity_post_text_margin_bottom"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="6dp">

        <EditText
            android:id="@+id/edit_text_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:fadeScrollbars="false"
            android:gravity="top"
            android:hint="@string/what_are_you_doing_today"
            android:maxLines="10"
            android:textSize="@dimen/activity_post_text_size" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view"
        android:layout_gravity="center_horizontal"
        android:text="@string/update_status"
        android:textAllCaps="false"
        android:textSize="@dimen/activity_post_button_post_text_size" />

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="bottom"
        android:text="@string/disconnect_form_facebook"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:gravity="top"
        android:text="@string/as_text"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/activity_post_text_logo_size" />
</RelativeLayout>
